hcnc_init/src/main/resources/static/css/ui-style.css
/* ... */
 .subtabs .subtab .num {padding: 2px 8px; background-color: #fff; font-size: 13px; color:#1e2e41; border-radius: 15px; margin-left: 10px; font-weight: 700;}
 .subtabs .subtab.on .num {background: #1e2e41; color:#fff;}
 /* .subtabs .subtab-m:nth-child(2) .num {background-color: #FFF4DE; color:#FFA200; }
 .subtabs .subtab-m:nth-child(3) .num {background-color: #ECF6FF; color:#0087FF; }
 .subtabs .subtab-m:nth-child(4) .num {background-color: #F6F6F6; color:#58585D; }
 .subtabs .subtab-m:nth-child(5) .num {background-color: #ECEFFF; color:#364CC5; }
 .subtabs .subtab-m:nth-child(6) .num {background-color: #FFF3F8; color:#FF0066; } */
 .subtab-content {display: none; width: 100%; height: calc(100% - 40px);}

 .subtab-content.active {display: block; background-color: #fff; padding:20px; border-radius: 0 8px 8px 8px; border:1px solid #E0E3E8; margin-bottom:20px;}
 .sanctner {position: relative; color:#0184E4; margin-left: 10px;}
 .sanctner::before {content: ''; position: absolute; top: -8px; left: -12px; display: inline-block; width: 6px; height: 6px; background-color: #0184E4; border-radius: 10px; margin: 7px 4px;}
 
/*=================================================================================
 * Button Style
 =================================================================================*/

 .btn-area {
     display: flex;
     gap: 10px;
 }

 .btn-area button,
 .btn-area .btn{
    display: inline-flex;
    align-items: center;
    gap: 6px;
    border-radius: 8px;
    padding: 11px 12px;
    border: 1px solid #c5ccd5;
    background: #fff;
    color: #1e2e41;
    font-size: 16px;
    font-weight: 600;
    line-height: 1;
    cursor: pointer;
 }
 .modal-btn .btn:hover,
 .btn-area button:hover,
 .btn-area .btn:hover{background:#eef3fb;}
 .btn-area button:disabled,
 .btn-area .btn:disabled{opacity:0.5; cursor:not-allowed;}
 .btn-area .btn.bg-bk{background:#000; color:#fff; border-color:#000;}

 .btn-area .btn.bg-primary{
    background: url("../icons/btn-ico-view.png") 12px center no-repeat #ffffff;
    background-size:16px;
    color:#000000;
    border-color:1px solid #C5CCD5;
    padding-left: 34px;
 }

 .btn-area .btn.bg-primary:hover{
    background: url("../icons/btn-ico-view-w.png") 12px center no-repeat #ED242C;
    background-size:16px;
    border-color: #ED242C;
    color: #ffffff;
}

 .search-btn-area .btn-search{
    display: inline-flex;
    align-items: center;
    justify-content: center;
    min-width: 90px;
    padding-left:20px;
    height: 36px;
    border-radius: 20px;
    border: 1px solid #212E41;
    background: url("../icons/ico-search.png") 14px center no-repeat #212E41;
    background-size:20px;
    color: #fff;
    /*font-size: 14px;*/
    font-weight: 600;
    cursor: pointer;
 }
 /* .search-btn-area .btn-search:hover{
    background:url("../icons/ico-search.png") 16px center no-repeat #3B6EEA;
} */


/* No icon style */
.btn-wrap {display:flex; margin-top:20px;}
.btn-wrap ul{display:flex;}
.btn-wrap li {padding:0 6px;}
.btn-wrap li:first-child {padding-left: 0;}
.btn-wrap li:last-child {padding-right:0;}
.btn-wrap ul li a{display:block; border:1px solid #000; line-height:40px; width:120px; height:40px; display: block; text-align: center; border-radius: 5px;}
.btn-wrap ul li a.btn-save {background-color: #ED242C; border: 1px solid #ED242C; color:#fff;}

 /* icon style*/
.btn-box {margin-bottom:10px;}
.btn-box li {display: inline-block; padding:0 3px;}
.btn-box li a {font-size:15px; display: block; padding:10px 15px 10px 38px; color:#fff; background-color:#ED242C; border-radius: 4px;}
.btn-box li:last-child {padding-right:0;}

/* Btn - 정렬기준 */
.btn-left-box {margin-bottom:15px;}
.btn-left-box ul {display:flex; justify-content: flex-start; align-items: center;}
.btn-left-box li {margin:0 4px 0 0;}
.btn-left-box li a {color:#474747; background-color:#fafafa; border:1px solid #474747; border-radius: 4px; text-align: center; padding:6px 12px; display: block;}
.btn-left-box li a:hover{background-color:#474747; color:#fff;}
.btn-left-box li:first-child {padding-left:0;}
.btn-left-box li:last-child {padding-right:0;}

.btn-center-box {width:100%; margin-top:15px;}
.btn-center-box ul {display:flex; justify-content: center; align-items: center;}
.btn-center-box li {padding:0 5px;}
.btn-center-box li a {display: block; padding: 7px 25px; color:#fff; background-color:#4967a3; border-radius: 4px;}
.btn-center-box li:last-child {padding-right:0;}

.btn-right-box ul {display:flex; justify-content:flex-end; align-items: center;}
.btn-right-box li {padding:4px 4px 4px 0;}
.btn-right-box li a {display:inline-block; padding:8px 15px; background-color:#3D5670; vertical-align:bottom; border-radius: 4px; text-align: center; color:#fff;}
.btn-right-box li:first-child {padding-left:0;}
.btn-right-box li:last-child {padding-right:0;}
 
.btn-col-wrap {display: flex; flex-flow: column wrap; align-items: center; justify-content: center}
.btn-col-wrap li {margin-bottom: 10px;}
.btn-up {display: inline-block; padding:16px 16px !important; background:url(../images/common/btn-up.png)no-repeat center; border:1px solid #5B6F88; border-radius: 4px;}
.btn-down {display: inline-block; padding:16px 16px !important; background:url(../images/common/btn-down.png)no-repeat center; border:1px solid #5B6F88; border-radius: 4px;}
.btn-right {display: inline-block; padding:30px 10px 5px 10px !important; background:url(../images/common/btn-right.png)#F2F5F9 no-repeat top 10px center; border:1px solid #5B6F88; border-radius: 4px; color:#5B6F88;}
.btn-left {display: inline-block; padding:30px 10px 5px 10px!important; background:url(../images/common/btn-left.png)#F2F5F9 no-repeat top 10px center; border:1px solid #5B6F88; border-radius: 4px; color:#5B6F88;}

.grid-btn .btn-plus{padding:8px 8px 6px 30px; background:url(../images/common/ico-plus.png) #F2F5F9 no-repeat left 12px center;}
/* ... */

